--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.8.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "numeral": "^2.0.6",
@@ -22,7 +24,9 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.1.0",
+    "redux-persist": "^6.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
